--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react-markdown": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
